       Yugabyte before attempting to create an advisory lock, which results in
       an error for more recent Yugabyte releases. Thanks to Stefano Ricciardi
       for the report (#841).
     - Removed a wayward mention of the long-deprecated `SQITCH_URI`
       environment variable from the Oracle tutorial. Thanks to Austin Hanson
       for the report (#845).

1.4.1  2024-02-04T16:35:32Z
     - Removed the quoting of the role and warehouse identifiers that was
       added to the Snowflake engine in v1.4.0. Turns out Snowflake allows a
       warehouse to be specified in a different database, in which case dots
       are valid in the name and should not be quoted! So users must properly
       quote when necessary, but added notes to `sqitchtutorial-snowflake.pod`
       on the need to use URI escapes for special characters. Thanks to
       Patrick Sabo for the find, and to @marc-marketparts for validating
       that URI encoding works.
     - Added notes on URL encoding database URLs to `sqitch-target.pod`, the
       main reference for database URLs in the Sqitch documentation.
     - Fixed the output of the list of changes to be deployed or reverted to
       actually require `--verbose` twice, as described in the v1.4.0 changes,
       and not just once. Thanks to Erik Wienhold for the PR (#785)!
     - Removed the duplicate change name from the output of the list of
       changes to be deployed or reverted with `-VV`. Thanks to Erik Wienhold
       for the PR (#787)!
     - Fixed invalid template resolution when adding a singe change to
       multiple engines at once. Thanks to Christian Riedel for the detailed
       bug report (#795)!
     - Fixed Oracle and Firebird test failures due to incorrect use of `chmod`.
       Thanks to Slaven Rezić for the report and the fix (#807)!
     - Tests now require Test::Warn 0.31 or later, as newline handling issues
       cause test failures in earlier versions. Thanks to Slaven Rezić for the